--- a/css/header.css
+++ b/css/header.css
@@ -6,35 +6,19 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0px 50px;
-	
+	padding: 0px 50px;	
     background-color: #7da918;
 	background-image: linear-gradient(30deg, #13547a 10% ,#43a00e 50%,#28ac44,#85FFBD);
 }
+.phone-wrap > li:hover, .phone-wrap > li > a > i :hover {color: white;}
+.ht-menu > li > span,
+.ht-menu > li > a,
+.phone-wrap > li > a,
 .phone-wrap > li > span {
 	font-size: 12px;
     color: #242424;
     font-family: Helvetica Neue,Helvetica,Arial,文泉驛正黑,WenQuanYi Zen Hei,Hiragino Sans GB,儷黑 Pro,LiHei Pro,Heiti TC,微軟正黑體,Microsoft JhengHei UI,Microsoft JhengHei,sans-serif;
-    
 }
-.phone-wrap > li > a {
-	font-size: 12px;
-	color: #242424;
-    font-family: Helvetica Neue,Helvetica,Arial,文泉驛正黑,WenQuanYi Zen Hei,Hiragino Sans GB,儷黑 Pro,LiHei Pro,Heiti TC,微軟正黑體,Microsoft JhengHei UI,Microsoft JhengHei,sans-serif;
-}
-.phone-wrap > li:hover, .phone-wrap > li > a > i :hover {color: white;}
-.ht-menu > li > span {
-	font-size: 12px;
-    color: #242424;
-    font-family: Helvetica Neue,Helvetica,Arial,文泉驛正黑,WenQuanYi Zen Hei,Hiragino Sans GB,儷黑 Pro,LiHei Pro,Heiti TC,微軟正黑體,Microsoft JhengHei UI,Microsoft JhengHei,sans-serif;
-    
-}
-.ht-menu > li > a {
-	font-size: 12px;
-	color: #242424;
-    font-family: Helvetica Neue,Helvetica,Arial,文泉驛正黑,WenQuanYi Zen Hei,Hiragino Sans GB,儷黑 Pro,LiHei Pro,Heiti TC,微軟正黑體,Microsoft JhengHei UI,Microsoft JhengHei,sans-serif;
-}
-/* .phone-wrap{font-family: Arial, Helvetica, sans-serif;} */
 /*Header Top*/
 .header-top {
     justify-content: space-between;
@@ -84,7 +68,6 @@ header{
 	position: relative;
     min-height: 26px;
     position: relative;
-
 }
 
 .header__navbar-item.header__navbar-user{
@@ -460,143 +443,10 @@ padding-right: 5px;
 	color: var(--primary-color);
 }
 
-/**/
-.auth-form{
-	width: 500px;
-	border-radius: 5px;
-	background: var(--white-color);
-	overflow: hidden;
-}
-.auth-form__container{
-	padding: 32px;
-	padding-bottom: 22px;
-}
-
-.auth-form__header{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 0 12px;
-}
-
-.auth-form__heading{
-	font-size: 2.2rem;
-	font-weight: 400;
-	color: var(--text-color);
-}
-
-.auth-form__switch-btn{
-	font-size: 1.4rem;
-	font-weight: 500;
-	color: var(--primary-color);
-	cursor: pointer;
-}
-
-.auth-form__input{
-	width: 100%;
-	height: 40px;
-	margin-top: 16px;
-	padding: 0 12px;
-	font-size: 1.4rem;
-	border-radius: 2px;
-	border: 1px solid var(--border-color);
-	outline: none;
-}
-
-.auth-form__input:focus{
-	border-color: #777;
-}
-
-.auth-form__aside{
-	margin-top: 18px;
-}
-
-.auth-form__policy-text{
-	font-size: 1.2rem;
-	line-height: 1.8rem;
-	text-align: center;
-	padding: 0 10px;
-}
-
-.auth-form__policy-link{
-	text-decoration: none;
-	color: var(--primary-color);
-}
-
-.auth-form__controls{
-	margin-top: 80px;
-}
-
 .btn.btn--primary{
 	background: var(--primary-color);
 	color: var(--white-color);
 }
-
-.auth-form__controls{
-	display: flex;
-	justify-content: flex-end;
-}
-.auth-form__controls-back{
-	margin-right: 8px;
-}
-
-.auth-form__controls-back:hover{
-	background-color: rgba(0, 0, 0, 0.05);
-} 
-
-.auth-form__socials{
-	background: #f5f5f5;
-	padding: 14px 30px;
-	display: flex;
-	justify-content: space-between;
-}
-
-.auth-form__socials-icon{
-	font-size: 1.8rem;
-}
-
-.auth-form__socials--facebook,
-.auth-form__socials--google{
-	color: var(--white-color);
-	width: 210px;
-}
-
-.auth-form__socials--facebook{
-	background: #3a5a98;
-	color: var(--white-color);
-}
-
-.auth-form__socials-title{
-	margin: 0 0 0 30px;
-}
-
-.auth-form__socials--google{
-	color: var(--text-color);
-}
-
-.auth-form-help{
-	display: flex;
-	justify-content: flex-end;
-}
-
-.auth-form__help-link{
-	font-size: 1.4rem;
-	text-decoration: none;
-	color: #939393;
-}
-
-.auth-form-help-separate{
-	display: block;
-	width: 1px;
-	height: 22px;
-	background: #eaeaea;
-	margin: 1px 16px 0;
-}
-
-.auth-form-help-fogot{
-	color: var(--primary-color);
-}
-
 
 .header-with-search{
 	height: var(--header-with-search-height);
@@ -761,7 +611,6 @@ padding-right: 5px;
 	font-size: 17px;
 	justify-content: center;
 }
-
 
 .footer-item__link{
 	text-decoration: none;
